new version merging mageia's branch: 	o check that choosen download directory is owned by root (mga#6083) 	o use more modern urpmi API 	o invalidate urpmi cache on upgrade (mga#1588) 	o drop support for mdv2007.x/2008.x/2009.x 	o move gurpmi upgrade log to .MdkOnline/ too so /root stays clean 	o dont pollute homedir with urpmi.cfg backup files (move to .MdkOnline/) 	o handle both MageiaUpdate & MandrivaUpdate

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "mdkonline-2.77.22.tar.xz": 2542c6681284188e3d3200ab6dff8728cffe1470
+  mdkonline-2.78.tar.xz: a41669e87b5d30f54941995a2fd9cb7c8d5e22b9
